--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  border: none;
+  text-decoration: none !important;
   /* border: 1px solid red; */
 }
-/* root */
+/*---------------------- root ----------------------*/
 :root {
   --primary-color: #0c5e69;
   --secondary-color: #d1c000;
@@ -12,15 +14,31 @@
   /* hover */
   /* text */
   --text-white: #fff;
+  --text-grey: #dcdcdc;
 }
-/* general */
+/*-------------------- general --------------------*/
 h1 {
   color: var(--primary-color);
 }
+h2 {
+  color: var(--secondary-color);
+}
+a {
+  color: #000;
+}
+.link-home {
+  position: absolute;
+  top: 10px;
+}
+.link-home i {
+  color: var(--text-white);
+  border: none;
+}
+#depense-titre,
+#revenu-titre {
+  /* display: none; */
+}
 /*----------------------- formulaire -----------------------*/
-/* body {
-  background: #212121;
-} */
 .logo {
   height: 150px;
 }
@@ -38,6 +56,7 @@ label {
   font-weight: 700;
   color: var(--primary-color);
 }
+/*--------------- buttons ---------------*/
 .btn-active {
   padding: 10px;
   border-radius: 10px;
@@ -45,3 +64,41 @@ label {
   color: var(--text-white);
   border: none;
 }
+/*--------------- buttons ---------------*/
+/*------------------------- formulaire exit -------------------------*/
+/*------------------------- page d'accueil -------------------------*/
+.budget-name {
+  background: var(--primary-color);
+  color: var(--text-white);
+}
+/*------------------------- tables -------------------------*/
+.budget-table {
+  overflow-x: auto;
+}
+table {
+  width: 100%;
+  border-collapse: ;
+  /* background: var(--background) !important; */
+}
+thead th {
+  border: 1px solid var(--secondary-color) !important;
+}
+thead th,
+td {
+  padding: 8px;
+  text-align: center;
+}
+td {
+  border: 1px solid var(--secondary-color) !important;
+}
+tbody tr:hover {
+  background: var(--primary-color) !important;
+  color: var(--text-white);
+}
+i {
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 50%;
+  padding: 2px;
+}
+/* -------------------------page d'accueil exit -------------------------*/
